Check pluginId contains '/' before using it as package type

Some old packages do not contain ServiceTypes field, and their plugin
name/id is not a package type. Usually a package type string contains
'/', so add check for that.

BUG: 449727
FIXED-IN: 5.104